initialisation du jeu course de labyrinthe

--- a/GamingPlatform/Views/Shared/_Layout.cshtml
+++ b/GamingPlatform/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 
 <body>
     <!-- En-tête (sticky) -->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="/"><i class="fas fa-gamepad mr-2"></i>JeuxHub</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
