--- a/GamingPlatform/Views/Home/Index.cshtml
+++ b/GamingPlatform/Views/Home/Index.cshtml
@@ -24,7 +24,7 @@
             <div class="carousel-caption d-none d-md-block">
                 <h2>Jouez avec vos amis</h2>
                 <p>Créez ou rejoignez un lobby pour commencer à jouer</p>
-                <a href="#" class="btn btn-primary btn-lg">Voir les lobbys</a>
+                <a href="@Url.Action("Index", "Lobby")" class="btn btn-primary btn-lg">Voir les lobbys</a>
             </div>
         </div>
         <div class="carousel-item">
@@ -46,63 +46,6 @@
     </a>
 </div>
 
-<!--
-<section id="games" class="container my-5">
-    <h2 class="text-center mb-4">Nos Jeux</h2>
-    <div class="row">
-        <div class="col-md-4 mb-4">
-            <div class="card game-card">
-                <img src="https://picsum.photos/400/300?random=4" class="card-img-top" alt="Speed Typing">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Speed Typing</h5>
-                    <p class="card-text">Testez votre vitesse de frappe dans une course effrénée !</p>
-                    <a href="@Url.Action("Index", "SpeedTypingGame", new { ID = "12345" })" class="btn btn-primary">Jouer</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-4">
-            <div class="card game-card">
-                <img src="https://picsum.photos/400/300?random=5" class="card-img-top" alt="Morpion">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Morpion</h5>
-                    <p class="card-text">Le classique jeu de stratégie pour 2 joueurs.</p>
-                    <a href="@Url.Action("Index", "MorpionGame")" class="btn btn-primary">Jouer</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-4">
-            <div class="card game-card">
-                <img src="https://picsum.photos/400/300?random=6" class="card-img-top" alt="Bataille Navale">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Bataille Navale</h5>
-                    <p class="card-text">Coulez la flotte de votre adversaire !</p>
-                    <a href="@Url.Action("Index", "BatailleNavaleGame")" class="btn btn-primary">Jouer</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-4">
-            <div class="card game-card">
-                <img src="https://picsum.photos/400/300?random=7" class="card-img-top" alt="Petit Bac">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Petit Bac</h5>
-                    <p class="card-text">Trouvez des mots dans différentes catégories !</p>
-                    <a href="@Url.Action("Index", "PetitBacGame")" class="btn btn-primary">Jouer</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-4">
-            <div class="card game-card">
-                <img src="https://picsum.photos/400/300?random=8" class="card-img-top" alt="Course de Labyrinthe">
-                <div class="card-body text-center">
-                    <h5 class="card-title">Course de Labyrinthe</h5>
-                    <p class="card-text">Trouvez la sortie avant vos adversaires !</p>
-                    <a href="@Url.Action("Index", "CourseLabyrintheGame")" class="btn btn-primary">Jouer</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
--->
 
 <section id="games" class="container my-5">
     <h2 class="text-center mb-4">Nos Jeux</h2>
@@ -117,7 +60,7 @@
                         <div class="card-body text-center">
                             <h5 class="card-title">@game.Name</h5>
                             <p class="card-text">@game.Description</p>
-                            <a href="@Url.Action("Index", "@(game.Name)Game")" class="btn btn-primary">Jouer</a>
+                            <a href="/game/details/@game.Id" class="btn btn-primary">Jouer</a>
                         </div>
                     </div>
                 </div>
@@ -173,35 +116,38 @@
                 </button>
             </div>
             <div class="modal-body">
-                <form id="createLobbyForm">
+                <form id="createLobbyForm" asp-controller="Lobby" asp-action="CreateWithSelect" method="post">
                     <div class="form-group">
                         <label for="lobbyName">Nom du lobby</label>
-                        <input type="text" class="form-control" id="lobbyName" placeholder="Nom du lobby" required>
+                        <input type="text" class="form-control" id="lobbyName" name="Name" placeholder="Nom du lobby" required>
                     </div>
 
                     <div class="form-group">
                         <label for="game">Choisir un jeu</label>
-                        <select name="game" class="form-control" id="game" required>
-                            <option value="">Speed Typing</option>
-                            <option value="">Morpion</option>
-                            <option value="">Petit Bac</option>
+                        <select name="GameId" class="form-control" id="game" required>
+                            <option value="" disabled selected>Sélectionnez un jeu</option>
+                            @foreach (var game in Model)
+                            {
+                                <option value="@game.Id">@game.Name</option>
+                            }
                         </select>
                     </div>
 
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="privateLobby">
+                        <input class="form-check-input" type="checkbox" id="privateLobby" name="IsPrivate" value="true">
                         <label class="form-check-label" for="privateLobby">Créer un lobby privé</label>
                     </div>
 
                     <div id="passwordField" class="form-group d-none mt-3">
                         <label for="lobbyPassword">Mot de passe</label>
-                        <input type="password" class="form-control" id="lobbyPassword" placeholder="Mot de passe">
+                        <input type="password" class="form-control" id="lobbyPassword" name="Password" placeholder="Mot de passe">
                     </div>
+
+                    <button type="submit" class="btn btn-primary mt-3">Créer</button>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-                <button type="button" class="btn btn-primary" onclick="createGlobalLobbyForm()">Créer</button>
             </div>
         </div>
     </div>
