--- a/GamingPlatform/Views/Shared/_Layout.cshtml
+++ b/GamingPlatform/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
                                 class="fas fa-home mr-1"></i>Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-controller="Games" asp-action="Categories"><i
-                                class="fas fa-th-large mr-1"></i>Catégories</a>
+                        <a class="nav-link" href="@Url.Action("Index", "Lobby")">
+                            <i class="fas fa-th-large mr-1"></i>Lobbies</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Games" asp-action="New"><i
@@ -36,10 +36,6 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="Home" asp-action="Contact"><i
                                 class="fas fa-envelope mr-1"></i>Contact</a>
-                    </li>
-                     <li class="nav-item">
-                        <a asp-action="AddGame" class="nav-link" >Ajouter jeux</a>
-                         
                     </li>
                     
                 </ul>
