--- a/GamingPlatform/Views/Lobby/Index.cshtml
+++ b/GamingPlatform/Views/Lobby/Index.cshtml
@@ -75,7 +75,7 @@
                             <td>@(lobby.IsPrivate ? "Privé" : "Public")</td>
                             <td>@lobby.CreatedAt.ToString("g")</td>
                             <td>
-                                <a class="btn btn-sm btn-info" href="/Lobby/Details/@lobby.Id">Jouer</a>
+                                <a class="btn btn-sm btn-info" href="/Lobby/Details/@lobby.Id">Rejoindre</a>
                             </td>
                         </tr>
                     }
