--- a/GamingPlatform/Views/Home/Index.cshtml
+++ b/GamingPlatform/Views/Home/Index.cshtml
@@ -46,6 +46,13 @@
     </a>
 </div>
 
+<div class="container mt-5 d-flex justify-content-center align-items-center" style="width: 20vw;">
+    <!-- Bouton pour ouvrir le modal d'enregistrement -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#registerOrLoginModal">
+        S'enregistrer
+    </button>
+</div>
+
 
 <section id="games" class="container my-5">
     <h2 class="text-center mb-4">Nos Jeux</h2>
@@ -152,3 +159,73 @@
         </div>
     </div>
 </div>
+
+<!-- Modal d'enregistrement ou de connexion -->
+<div class="modal fade" id="registerOrLoginModal" tabindex="-1" role="dialog" aria-labelledby="registerOrLoginModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="registerOrLoginModalLabel">S'enregistrer ou Se Connecter</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <!-- Formulaire de connexion ou d'enregistrement -->
+                <ul class="nav nav-tabs" id="registerLoginTab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="register-tab" data-toggle="tab" href="#register" role="tab" aria-controls="register" aria-selected="true">S'enregistrer</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="login-tab" data-toggle="tab" href="#login" role="tab" aria-controls="login" aria-selected="false">Se connecter</a>
+                    </li>
+                </ul>
+
+                <div class="tab-content mt-3" id="registerLoginTabContent">
+                    <!-- Formulaire d'enregistrement -->
+                    <div class="tab-pane fade show active" id="register" role="tabpanel" aria-labelledby="register-tab">
+                        <form asp-action="RegisterPlayer" method="post">
+                            <div class="form-group">
+                                <label for="registerPseudo">Pseudo</label>
+                                <input type="text" class="form-control" id="registerPseudo" name="pseudo" required />
+                            </div>
+                            <div class="form-group">
+                                <label for="registerName">Nom (Optionnel)</label>
+                                <input type="text" class="form-control" id="registerName" name="name" />
+                            </div>
+                            <div class="form-group">
+                                <label for="registerEmail">Email (Optionnel)</label>
+                                <input type="email" class="form-control" id="registerEmail" name="email" />
+                            </div>
+                            <button type="submit" class="btn btn-primary">S'enregistrer</button>
+                        </form>
+                    </div>
+
+                    <!-- Formulaire de connexion -->
+                    <div class="tab-pane fade" id="login" role="tabpanel" aria-labelledby="login-tab">
+                        <form asp-action="LoginPlayer" method="post">
+                            <div class="form-group">
+                                <label for="loginPseudo">Pseudo</label>
+                                <input type="text" class="form-control" id="loginPseudo" name="pseudo" required />
+                            </div>
+                            <button type="submit" class="btn btn-primary">Se connecter</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+@section Scripts {
+    <script>
+        // S'assurer que le modal est bien réinitialisé à chaque fois qu'il est fermé
+        $('#registerOrLoginModal').on('hidden.bs.modal', function () {
+            $(this).find('form')[0].reset();
+        });
+    </script>
+}
